noinst_LIBRARIES=libferro.a

# library_includedir=$(includedir)/ferro
# library_include_HEADERS=AStream.h cstypes.h macroman.h MapInfoChunk.h	\
ScriptChunk.h TerminalChunk.h Wad.h Wadfile.h Unimap.h

libferro_a_SOURCES=AStream.h cstypes.h macroman.h MapInfoChunk.h	\
ScriptChunk.h TerminalChunk.h Wad.h Wadfile.h Unimap.h			\
									\
AStream.cpp macroman.cpp MapInfoChunk.cpp ScriptChunk.cpp		\
TerminalChunk.cpp Wad.cpp Wadfile.cpp Unimap.cpp

AM_CPPFLAGS=-I $(top_srcdir)
